--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,18 +1,33 @@
-.brands {
+.brands_container {
+  --gap: 2rem;
   width: 70%;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
+  user-select: none;
+  flex-wrap: nowrap;
   align-items: center;
-  gap: 1rem;
+  gap: var(--gap);
   margin: 1rem;
+}
+
+.brands_list {
+  display: flex;
+  flex-shrink: 0;
+  justify-content: space-around;
+  align-items: center;
+  gap: var(--gap);
+  min-width: 100%;
+  animation-name: marquee;
+  animation-duration: 60s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
 }
 
 .brandImg {
   width: auto;
   height: 10vmin;
   min-height: 60px;
+  max-width: 200px;
 }
 
 .btn {
@@ -47,8 +62,8 @@
   font-size: var(--text-size-default);
   color: var(--color-label-default);
   transition: 0.2s ease all;
-  /* -moz-animation: 0.2 ease all; */
-  /* -webkit-animation: 0.2s ease all; */
+  -moz-animation: 0.2 ease all;
+  -webkit-animation: 0.2s ease all;
 }
 
 .contact input:focus ~ label,
@@ -111,12 +126,14 @@
   flex-wrap: wrap;
   align-items: stretch;
   width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .homeImg {
   width: auto;
   height: 100%;
-  max-height: 80vw;
+  max-height: 45vmin;
 }
 
 .section {
@@ -159,4 +176,14 @@
 
 .halfWidth {
   width: 49%;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(calc(-100% - var(--gap)));
+  }
 }
