--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,11 +1,11 @@
 .brands_container {
   --gap: 2rem;
-  width: 70%;
   display: flex;
+  overflow: hidden;
   user-select: none;
-  flex-wrap: nowrap;
-  align-items: center;
   gap: var(--gap);
+  flex-wrap: nowrap;
+  white-space: nowrap;
   margin: 1rem;
 }
 
@@ -15,19 +15,22 @@
   justify-content: space-around;
   align-items: center;
   gap: var(--gap);
-  min-width: 100%;
   animation-name: marquee;
-  animation-duration: 60s;
+  animation-duration: 10s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-direction: normal;
+  animation-direction: reverse;
 }
 
 .brandImg {
   width: auto;
-  height: 10vmin;
+  height: 15vmin;
   min-height: 60px;
-  max-width: 200px;
+  max-width: 400px;
+  padding: 5px;
+  border: 2px solid #3b3743;
+  background-color: #3b3743;
+  border-radius: 1rem;
 }
 
 .btn {
